# pdf-font-rewriter

./: .gitignore  README.md  SUPERINTELLIGENCE_PARAGRAPH_FIT_PROMPT.md  SUPERINTELLIGENCE_VISUAL_FIT_PROMPT.md  diagnose.py  manifest.json  package-lock.json  package.json  pdf-font-rewriter-spec.md  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: attest-obsidian-release.yml  build-helper.yml  build-obsidian-plugin.yml  release.yml
docs/: live-refont-superintelligence-brief.md
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css
obsidian-plugin/fonts/: README.md
obsidian-plugin/scripts/: helper-installer-test-entry.ts  obsidian-test-stub.ts  test-helper-installer.mjs
obsidian-plugin/src/: assets.d.ts  builtinFonts.ts  fontSelection.ts  helperInstaller.ts  helperRelease.ts  liveRefontClient.ts  liveRefontProtocol.ts  liveRefontView.ts  main.ts  platform.ts  releaseAssets.ts  rewriteModal.ts  runner.ts  settings.ts
packaging/: build_helper.py  check_release_versions.py  install_local_helper.py  prepare_helper_release.py  refont_helper_entry.py
refont/: __init__.py  __main__.py  classifier.py  converter.py  extractor.py  font_utils.py  ink_sampler.py  inserter.py  live_plan.py  live_server.py  models.py  refont.py  region_policy.py  remover.py  report.py  safety.py  shaper.py  text_layer_validator.py  visual_fit.py  visual_verify.py
tests/: make_cjk_sample_pdf.py  make_sample_pdf.py  test_char_stats.py
tests/visual/: README.md
(+1 files in other folders)
